--- a/ShoppingCartProject/style.css
+++ b/ShoppingCartProject/style.css
@@ -6,18 +6,34 @@
     padding:5px;
 }
 #nav {
+    //border: 10px solid blue;
     line-height:30px;
     background-color:#eeeeee;
-    height:300px;
+    height:600px;
     width:100px;
     float:left;
     padding:5px;
 }
 #section {
-    width:350px;
+    //border: 10px solid blue;
+    width:1000px;
     float:left;
-    padding:10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 75px;
+    padding-right: 10px;
 }
+
+#aside{
+    //border: 10px solid blue;
+    width: 200px;
+    float: right;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
 #footer {
     background-color:black;
     color:white;
@@ -28,9 +44,11 @@
 
 table {
     width:100%;
+    padding: 10px;
+    border: 10px solid black;
 }
 table, th, td {
-    border: 1px solid black;
+    border: 0px solid #fff;
     border-collapse: collapse;
 }
 th, td {
@@ -48,9 +66,38 @@ table#t01 th	{
     color: white;
 }
 
-#box {
-    width: 600px;
-    padding: 25px;
-    border: 25px solid cornflowerblue;
+#searchBox {
+    background: #fff;
+    width: 700px;
+    padding: 10px;
+    border: 25px solid #fff;
     margin: 25px;
+}
+
+#itemInfoBox{
+    width: 1000px;
+    padding: 10px;
+    //border: 25px solid #fff;
+    //margin: 25px;
+}
+
+#shoppingCartButton{
+  padding:5px;
+  background-color: #dcdcdc;
+  border: 1px solid #666;
+  color:#000;
+  text-decoration:none;
+}
+
+button:hover{
+    color: #666;
+    outline: #000;
+}
+
+button:active{
+    
+}
+
+button:focus{
+    
 }
