UPDATE --Changed a lot of code.. putting the code in classes where it should be.

--- a/ShoppingCartProject/style/style.css
+++ b/ShoppingCartProject/style/style.css
@@ -6,17 +6,17 @@
     padding:5px;
 }
 #nav {
-    //border: 10px solid blue;
+    border: 10px solid blue;
     line-height:30px;
     background-color:#eeeeee;
-    height:600px;
+    height:1200px;
     width:100px;
     float:left;
     padding:5px;
     
 }
 #section {
-    //border: 10px solid blue;
+    border: 10px solid blue;
     width:1000px;
     float:left;
     padding-top: 50px;
@@ -26,7 +26,7 @@
 }
 
 #aside{
-    //border: 10px solid blue;
+    border: 10px solid blue;
     width: 200px;
     float: right;
     padding-top: 50px;
@@ -44,12 +44,15 @@
 }
 
 table {
-    width:100%;
-    padding: 10px;
-    border: 10px solid black;
+    width:80%;
+    padding: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 table, th, td {
-    border: 0px solid #fff;
+    border: 0px solid #eeeeee;
     border-collapse: collapse;
 }
 th, td {
@@ -69,14 +72,14 @@ table#t01 th	{
 
 #searchBox {
     background: #fff;
-    width: 700px;
+    width: 1000px;
     padding: 10px;
-    border: 25px solid #fff;
-    margin: 25px;
+    //border: 25px solid #fff;
+    //margin: 25px;
 }
 
 #itemInfoBox{
-    width: 1000px;
+    width: 900px;
     padding: 10px;
     //border: 25px solid #fff;
     //margin: 25px;
