--- a/ShoppingCartProject/style/style.css
+++ b/ShoppingCartProject/style/style.css
@@ -1,16 +1,19 @@
 @CHARSET "ISO-8859-1";
 #header {
-    background-color:black;
+    background-color: firebrick;
     color:white;
     text-align:center;
     padding:5px;
+    border-bottom: 2px solid black;
+    font-family: sans-serif;
 }
 #nav {
-    //border: 10px solid blue;
+    border-right: 10px solid #eeeeee;
+    border-right-style: groove;
     line-height:30px;
-    background-color:#eeeeee;
+    background-color: #eeeeee;
     height:1200px;
-    width:100px;
+    width:130px;
     float:left;
     padding:5px;
     
@@ -37,11 +40,12 @@
 }
 
 #footer {
-    background-color:black;
+    background-color: firebrick;
     color:white;
     clear:both;
     text-align:center;
     padding:5px;
+    border-top: 2px solid black;
 }
 
 table {
@@ -52,6 +56,11 @@ table {
     padding-bottom: 25px;
     padding-top: 25px;
 }
+
+body{
+    width:100%;
+}
+
 table, th, td {
     border: 2px solid #eeeeee;
     border-collapse: collapse;
@@ -82,6 +91,42 @@ table#t02 th	{
     color: white;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    padding-top: 80px;
+}
+
+li {
+    float: left;
+}
+
+a:link, a:visited {
+    display: block;
+    width: 120px;
+    font-weight: bold;
+    color: black;
+    background-color: #eeeeee;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+
+a:hover, a:active {
+    background-color: #cccccc;
+}
+
+.searchInput{
+    float: left;
+    padding-top: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 10px;
+}
+
 #searchBox {
     background: #fff;
     width: 900px;
@@ -100,12 +145,31 @@ table#t02 th	{
 #tableBox{
     border-radius: 25px;
 }
+#searchInputPlacement{
+    float: left;
+    padding-left: 300px;
+    padding-top: 200px;
+}
 
-/*#shoppingCartButton{
-  padding:5px;
-  background-color: #dcdcdc;
-  border: 2px solid #666;
-  color: black;
-  text-decoration:none;
-}*/
+#searchInputDecor{
+    width: 500px;
+    height: 30px;
+    border-radius: 5px;
+    border-style: groove;
+}
+
+#searchButtonPlacement{
+    padding-top: 10px;
+    padding-left: 450px;
+    float: left;
+}
+
+#searchButtonDecor{
+    border-radius: 10px;
+    border-bottom-style: groove;
+    width: 200px;
+    background-color: #cccccc;
+    font-family: sans-serif;
+    font-size: 15px;
+}
 
