--- a/ShoppingCartProject/style/style.css
+++ b/ShoppingCartProject/style/style.css
@@ -1,8 +1,12 @@
 @CHARSET "ISO-8859-1";
+
+.container{
+    position: relative;
+}
+
 #header {
     background-color: firebrick;
     color:white;
-    text-align:center;
     padding:5px;
     border-bottom: 2px solid black;
     font-family: sans-serif;
@@ -19,24 +23,19 @@
     
 }
 #section {
-    //border: 10px solid blue;
-    width:1000px;
-    float:left;
+    width: 950px;
+    float: left;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 100px;
-    padding-right: 10px;
+    padding-right: 100px;
 }
 
 #aside{
-    //border: 10px solid blue;
     width: 155px;
+    height: 1200px;
     float: right;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    padding-left: 25px;
-    padding-right: 25px;
-   
+    padding: 158px 52px 100px 20px;
 }
 
 #footer {
@@ -48,28 +47,33 @@
     border-top: 2px solid black;
 }
 
+body{
+    width:100%;
+}
+
 table {
-    width:80%;
-    padding: 20px;
+    border: 1px solid black;
+    border-radius: 25px;
+    border-collapse: collapse;
+    background-color: #eee;
+    width: 900px;
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 25px;
     padding-top: 25px;
 }
 
-body{
-    width:100%;
-}
 
 table, th, td {
-    border: 2px solid #eeeeee;
-    border-collapse: collapse;
+    border-width: 5px;
 }
 th, td {
     padding: 5px;
-    text-align: left;
+    /*text-align: left;*/
 }
 table#t01 tr:nth-child(even) {
+    border-radius: 25px;
+    width: 700px;
     background-color: #eee;
 }
 table#t01 tr:nth-child(odd) {
@@ -129,17 +133,8 @@ a:hover, a:active {
 
 #searchBox {
     background: #fff;
-    width: 900px;
-    padding: 10px;
-    //border: 25px solid #fff;
-    //margin: 25px;
-}
-
-#itemInfoBox{
-    width: 900px;
-    padding: 10px;
-    //border: 25px solid #fff;
-    //margin: 25px;
+    width: 600px;
+    padding: 51px 33px;
 }
 
 #tableBox{
@@ -173,3 +168,26 @@ a:hover, a:active {
     font-size: 15px;
 }
 
+#sideButtonDecor{
+    border-radius: 25px;
+    border-style: solid;
+    border-color: #999999;
+    width: 150px;
+    height: 50px;
+}
+
+#sideButtonDecor:hover{
+    background-color: #cccccc;
+}
+
+#sideButtonDecor:active{
+    background-color: #999999;
+}
+
+#asideButtonBox{
+    background-color: coral;
+    box-shadow: 0px 2px 6px 4px;
+    border-radius: 10px;
+    border-style: solid;
+    padding: 60px 163px 59px 14px;
+}
